--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,6 +16,7 @@ html, body {
 body {
     padding-top: 50px;
 	background-color:#ffffff;
+	color: black;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
